# robotics

Vector_Transformation/devel/: .catkin  .rosinstall  local_setup.sh
Vector_Transformation/devel/include/transformation/: Input.h  Output.h
Vector_Transformation/devel/lib/pkgconfig/: transformation.pc
Vector_Transformation/devel/lib/transformation/: listener  talker
Vector_Transformation/src/transformation/: CMakeLists.txt  package.xml
Vector_Transformation/src/transformation/msg/: Input.msg
Vector_Transformation/src/transformation/src/: .listener.cpp.swp  .talker.cpp.swp  listener.cpp  talker.cpp
arm_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
arm_ws/src/arm_description/: package.xml
arm_ws/src/arm_gazebo/: CMakeLists.txt
arm_ws/src/arm_lib/: CMakeLists.txt
devel/: local_setup.sh  setup.sh
devel/include/arm_gazebo/: fk.h  fkRequest.h  fkResponse.h  ik.h  ikRequest.h  ikResponse.h  pose.h
devel/include/arm_lib/: angle.h
devel/lib/arm_lib/: topic_publisher.py
devel/lib/pkgconfig/: arm_description.pc  arm_gazebo.pc  arm_lib.pc  box_description.pc
src/arm_description/: package.xml
src/arm_description/models/: model.sdf
src/arm_gazebo/: CMakeLists.txt
src/arm_gazebo/launch/: arm.launch
src/arm_gazebo/scripts/: command.bash  ikservice.py  image.py  rotate.py
src/arm_gazebo/src/: controller.cpp  gripercontroller.cpp
src/arm_gazebo/worlds/: arm.world
src/arm_lib/: CMakeLists.txt  package.xml
src/box_description/: CMakeLists.txt  package.xml
src/box_description/models/: model.config  model.sdf
(+72 files in other folders)
